[package]
name = "hello_work"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["smol"] }
# iced = { version = "0.13.1", features = ["smol"] }
directories = "6.0.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
